--- a/website/.vscode/settings.json
+++ b/website/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\PYTHON\\.virtualenvs\\Django-hKktBx3M\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\herbe_\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
