--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\PYTHON\\.virtualenvs\\Django-hKktBx3M\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\Users\\PYTHON\\Documents\\GitHub\\Projet12\\env\\Scripts\\python.exe"
 }
