--- a/website/.vscode/settings.json
+++ b/website/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\PYTHON\\.virtualenvs\\website-7FbU2pzo\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\Laura\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
