--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\PYTHON\\.virtualenvs\\Django-hKktBx3M\\Scripts\\python.exe"
+    "python.pythonPath": "website\\all4animals\\venv\\Scripts\\python.exe"
 }
