[ADD] into gitignore migration path

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# all migration path
+website\all4animals\alert\migrations
+website\all4animals\housing\migrations
+website\all4animals\registration\migrations
